added a lot of feature and changed many
