# handlers/models.go
@@ -8,14 +8,15 @@ type LoginRequest struct {
 type RegisterRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
+	Name     string `json:"name"`
+	Surname  string `json:"surname"`
 }
 
 type Cycle struct {
-	ID        int `json:"id" db:"id"`
-	ProductID int `json:"product_id" db:"product_id"`
-	Year      int `json:"year" db:"year"`
-	Month     int `json:"month" db:"month"`
-	CycleNo   int `json:"cycle,omitempty" db:"cycle"`
+	ProductID  int `json:"product_id" db:"product_id"`
+	Year       int `json:"year" db:"year"`
+	Month      int `json:"month" db:"month"`
+	CycleCount int `json:"cycle_count" db:"cycle_count"`
 }
 
 type Institution struct {
@@ -30,8 +31,8 @@ type Product struct {
 	Brand         string `json:"brand" db:"brand"`
 	Model         string `json:"model" db:"model"`
 	InstitutionID int    `json:"institution_id" db:"institution_id"`
-	Responsible   string `json:"responsible,omitempty" db:"responsible"`
-	Owner         string `json:"owner,omitempty" db:"owner"`
+	ResponsibleID int    `json:"responsible_id,omitempty" db:"responsible_id"`
+	OwnerID       int    `json:"owner_id,omitempty" db:"owner_id"`
 	Status        string `json:"status,omitempty" db:"status"`
 }
 
@@ -45,4 +46,12 @@ type ProductWithInstitution struct {
 	Status        string `json:"status" db:"status"`
 	InstitutionID int    `json:"institution_id" db:"institution_id"`
 	Institution   string `json:"institution_name" db:"institution_name"`
+}
+
+//responsible ve owner id'leri string olarak tanımlanmış. Bu alanlar int olmalı.
+
+type JWTClaimsUser struct {
+	UserID   int    `json:"user_id"`
+	Username string `json:"username"`
+	Role     string `json:"role"`
 }
