# handlers/product.go
@@ -1,7 +1,10 @@
 package handlers
 
 import (
+	"fmt"
+	"net/http"
 	"strconv"
+	"time"
 	"tsProject/models"
 
 	"github.com/gofiber/fiber/v2"
@@ -30,10 +33,10 @@ func (h *Handler) AddProduct(c *fiber.Ctx) error {
 		product.Serial,
 		product.Brand,
 		product.Model,
-		product.Responsible,
-		product.Owner,
 		product.Status,
 		product.InstitutionID,
+		product.ResponsibleID,
+		product.OwnerID,
 	)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
@@ -128,4 +131,138 @@ func (h *Handler) GetByID(c *fiber.Ctx) error {
 		})
 	}
 	return Response(c, 200, "Product fetched successfully", product)
+}
+
+// @Summary Get All Products with institution and cycle
+// @Description Get all products with institution and cycle
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.ProductWithInstitutionAndCycle
+// @Failure 400 {object} map[string]string
+// @Security BearerAuth
+// @Router /api/products/yok [get]
+func (h *Handler) GetAllProductsWithInstitutionAndCycle(c *fiber.Ctx) error {
+	products, err := h.services.ProductService.GetAllProductsWithInstitutionAndCycle()
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Failed to fetch products with institutions and cycles",
+			"error":   err.Error(),
+		})
+	}
+	return Response(c, http.StatusOK, "Products with institutions and cycles fetched successfully", products)
+}
+
+// @Summary Get Assigned Products
+// @Description Get products assigned to the current user based on their JWT token
+// @Tags profile
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.ProductWithInstitutionAndCycle
+// @Failure 400 {object} map[string]string "Invalid user ID"
+// @Failure 500 {object} map[string]string "Failed to fetch assigned products"
+// @Security BearerAuth
+// @Router /api/profile/institutions [get]
+func (h *Handler) GetAssignedProductsHandler(c *fiber.Ctx) error {
+	// JWT'den kullanıcı ID'sini al
+	user, err := ParseJWT(c)
+	if err != nil {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"message": "Invalid user",
+			"error":   err.Error(),
+		})
+	}
+
+	// GetAssignedProducts fonksiyonunu çağır
+	products, err := h.services.ProductService.GetAssignedProducts(user.UserID)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Failed to fetch assigned products",
+			"error":   err.Error(),
+		})
+	}
+
+	// Başarıyla dönen ürünleri JSON olarak yanıtla
+	return Response(c, http.StatusOK, "Assigned products fetched successfully", products)
+}
+
+// @Summary Filter Products by Institution ID
+// @Description Get products by institution ID
+// @Tags products
+// @Param id path int true "Institution ID"
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.ProductWithInstitutionAndCycle
+// @Failure 400 {object} map[string]string "Invalid institution ID"
+// @Failure 500 {object} map[string]string "Failed to fetch filtered products"
+// @Security BearerAuth
+// @Router /api/products/filterbyinsid/{id} [get]
+func (h *Handler) GetProductsByInstitutionID(c *fiber.Ctx) error {
+	institutionIDParam := c.Params("id")
+	institutionID, err := strconv.Atoi(institutionIDParam)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Invalid request",
+			"error":   err.Error(),
+		})
+	}
+	products, err := h.services.ProductService.FilterByInstitutionID(institutionID)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Failed to fetch products",
+			"error":   err.Error(),
+		})
+	}
+	return Response(c, 200, "Products fetched successfully", products)
+}
+
+//databasede kurumlar tekrarlı kaydedilmiş onu düzelt!!!!!!!!!!
+
+// @Summary Filter Products
+// @Description Filter products by given filter
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param filter body models.ProductFilter true "Product filter"
+// @Success 200 {array} models.ProductWithInstitutionAndCycle
+// @Failure 400 {object} map[string]string "Invalid JSON format"
+// @Failure 500 {object} map[string]string "Failed to fetch products"
+// @Security BearerAuth
+// @Router /api/products/filter [post]
+func (h *Handler) FilterProducts(c *fiber.Ctx) error {
+	var filter models.ProductFilter
+	if err := c.BodyParser(&filter); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Invalid JSON format",
+			"error":   err.Error(),
+		})
+	}
+	products, err := h.services.ProductService.Filter(filter)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Failed to fetch products",
+			"error":   err.Error(),
+		})
+	}
+	return Response(c, 200, "Products fetched successfully", products)
+}
+
+func (h *Handler) DownloadProductsWithInstitutionAndCycle(c *fiber.Ctx) error {
+	format := c.Query("format")
+	fmt.Println("format", format)
+	excelBuffer, err := h.services.ProductService.DownloadCycles(format)
+	fmt.Println("excelBuffer", excelBuffer)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "Failed to download",
+			"error":   err.Error(),
+		})
+	}
+	fileName := "donguler_" + time.Now().Format("20060102_150405") + ".xlsx" // Örnek: products_20240911_153045.xlsx
+
+	c.Set("Content-Type", "application/octet-stream")
+	c.Set("Content-Disposition", "attachment; filename="+fileName)
+	c.Set("Content-Transfer-Encoding", "binary")
+	return c.SendStream(excelBuffer)
+
 }
